--- a/Aub.Eece503e.ChatService.Web/appsettings.json
+++ b/Aub.Eece503e.ChatService.Web/appsettings.json
@@ -9,6 +9,6 @@
   "AzureStorageSettings": {
     "ConnectionString": "",
     "ProfilesTableName": "Profiles",
-    "ProfilePicturesContainerName": "ProfilePictures"
+    "ProfilePictureContainerName": "images"
   }
 }
