--- a/Aub.Eece503e.ChatService.Web/appsettings.json
+++ b/Aub.Eece503e.ChatService.Web/appsettings.json
@@ -10,5 +10,17 @@
     "ConnectionString": "",
     "ProfilesTableName": "Profiles",
     "ProfilePictureContainerName": "images"
+  },
+  
+  "ApplicationInsights": {
+    "InstrumentationKey": ""
+  },
+
+  "DocumentDbSettings": {
+    "EndpointUrl": "https://chatservice.documents.azure.com:443/",
+    "PrimaryKey": "",
+    "MaxConnectionLimit": 50,
+    "DatabaseName": "chatservicedb_dev",
+    "CollectionName": "conversations"
   }
 }
